fix: 修复Android设备下无法进行位置选点

--- a/src/manifest.json
+++ b/src/manifest.json
@@ -42,11 +42,7 @@
           "<uses-permission android:name=\"android.permission.WRITE_SETTINGS\"/>"
         ],
         "minSdkVersion": 21,
-        "abiFilters": [
-          "armeabi-v7a",
-          "arm64-v8a",
-          "x86"
-        ]
+        "abiFilters": ["armeabi-v7a", "arm64-v8a", "x86"]
       },
       "ios": {
         "idfa": false,
@@ -109,17 +105,15 @@
       "enable": false
     },
     /**
-  * 挂到后台依然可以使用GPS定位
-  */
+     * 挂到后台依然可以使用GPS定位
+     */
     "plugins": {
       "chooseLocation": {
         "version": "1.0.10",
         "provider": "wx76a9a06e5b4e693e"
       }
     },
-    "requiredBackgroundModes": [
-      "location"
-    ],
+    "requiredBackgroundModes": ["location"],
     "permission": {
       "scope.userLocation": {
         "desc": "你的位置信息将用于小程序定位"
